Fixed toggleVisibility using getComputedStyle

--- a/styles/my-styles.css
+++ b/styles/my-styles.css
@@ -24,12 +24,6 @@ article {font-family: 'Roboto', sans-serif;
     margin-top: 1em;
     max-height: 50px;}
 
-article.open {
-    max-height: 1000px;}
-    
-/* Apply style to ID */
-#p2 {font-size: large;}
-
 body {
     padding: 2em;} 
 
@@ -49,13 +43,13 @@ figure {
     gap: 2em; 
     flex-direction: row;
     flex-wrap: wrap;    
-    justify-content: space-evenly;
+    /*justify-content: space-evenly;*/
     padding: 2em;}
 
 .flex-nested-container {
     display: flex;
     flex-direction: column; 
-    flex-wrap: wrap;    
+    flex-wrap: wrap;     
     align-content: flex-start;
     justify-content: center;
     border: 1px solid;
@@ -84,9 +78,6 @@ figure {
     }
     .flex-container {flex-direction: row;}}
 
-
-
-
 .dropbtn {
     background-color: #d4d4d4;
     color: white;
@@ -96,7 +87,6 @@ figure {
     cursor: pointer;
     width: 100%;}
 
-    
 .dropbtn:hover, .dropbtn:focus {
     background-color: #696969;}
 
@@ -105,19 +95,4 @@ figure {
     display: inline-block;}
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
+   display: none;}
